script to narrow down the reports to only those with the keywords completed

--- a/requested_scripts/on_siu_2017_2018.ipynb
+++ b/requested_scripts/on_siu_2017_2018.ipynb
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "# base url for page is: https://www.ontario.ca/\n",
-    "baseurl = \"https://www.ontario.ca/\""
+    "baseurl = \"https://www.ontario.ca\""
    ]
   },
   {
