just reason for police investigation left, trying to determine the best area to get that information from in the report

--- a/requested_scripts/on_siu_2017_2018.ipynb
+++ b/requested_scripts/on_siu_2017_2018.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "192bed8f-237f-4804-9322-6211ff7c0390",
    "metadata": {},
    "outputs": [],
@@ -13,14 +13,14 @@
     "# import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from urllib.request import urlopen\n",
+    "from urllib.request import Request, urlopen\n",
     "from bs4 import BeautifulSoup\n",
     "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "9342ecdb-ac08-484f-b6b3-7a60b270c0d7",
    "metadata": {},
    "outputs": [
@@ -45,6 +45,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>Case number</th>\n",
        "      <th>Special Investigations Unit incident date</th>\n",
        "      <th>Special Investigations Unit published date</th>\n",
@@ -53,30 +54,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>&lt;a href=\"/page/siu-directors-report-case-17-of...</td>\n",
        "      <td>2017-12-30</td>\n",
        "      <td>2018-10-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>&lt;a href=\"/page/siu-directors-report-case-17-ov...</td>\n",
        "      <td>2017-10-11</td>\n",
        "      <td>2018-10-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>&lt;a href=\"/page/siu-directors-report-case-17-tc...</td>\n",
        "      <td>2017-11-08</td>\n",
        "      <td>2018-10-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>&lt;a href=\"/page/siu-directors-report-case-17-of...</td>\n",
        "      <td>2017-10-27</td>\n",
        "      <td>2018-09-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>&lt;a href=\"/page/siu-directors-report-case-18-pv...</td>\n",
        "      <td>2018-06-09</td>\n",
        "      <td>2018-09-25</td>\n",
@@ -86,12 +92,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                                         Case number  \\\n",
-       "0  <a href=\"/page/siu-directors-report-case-17-of...   \n",
-       "1  <a href=\"/page/siu-directors-report-case-17-ov...   \n",
-       "2  <a href=\"/page/siu-directors-report-case-17-tc...   \n",
-       "3  <a href=\"/page/siu-directors-report-case-17-of...   \n",
-       "4  <a href=\"/page/siu-directors-report-case-18-pv...   \n",
+       "   Unnamed: 0                                        Case number  \\\n",
+       "0           0  <a href=\"/page/siu-directors-report-case-17-of...   \n",
+       "1           1  <a href=\"/page/siu-directors-report-case-17-ov...   \n",
+       "2           2  <a href=\"/page/siu-directors-report-case-17-tc...   \n",
+       "3           3  <a href=\"/page/siu-directors-report-case-17-of...   \n",
+       "4           4  <a href=\"/page/siu-directors-report-case-18-pv...   \n",
        "\n",
        "  Special Investigations Unit incident date  \\\n",
        "0                                2017-12-30   \n",
@@ -108,20 +114,20 @@
        "4                                 2018-09-25  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# import pages to scrape from the csv file\n",
-    "df = pd.read_csv(\"reports_to_scrape/on_siu_2018.csv\")\n",
+    "df = pd.read_csv(\"reports_to_scrape/on_siu_2018_w_keywords.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a36109e4-37ba-47f0-90af-e2d95755a56c",
    "metadata": {},
    "outputs": [],
@@ -132,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "3ca0b41e-cbff-42e4-a723-8a7c4653e15f",
    "metadata": {},
    "outputs": [
@@ -140,8 +146,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<a href=\"/page/siu-directors-report-case-17-ofd-379\">17-OFD-379</a>\n",
-      "/page/siu-directors-report-case-17-ofd-379\n"
+      "<a href=\"/page/siu-directors-report-case-18-pvi-175\">18-PVI-175</a>\n",
+      "/page/siu-directors-report-case-18-pvi-175\n"
      ]
     }
    ],
@@ -149,9 +155,9 @@
     "# get the link from the case number part of the df\n",
     "\n",
     "cases = df[\"Case number\"].tolist()\n",
-    "print(cases[0])\n",
+    "print(cases[4])\n",
     "\n",
-    "soup = BeautifulSoup(cases[0], \"html.parser\")\n",
+    "soup = BeautifulSoup(cases[4], \"html.parser\")\n",
     "link = soup.find(\"a\")['href']\n",
     "\n",
     "print(link)"
@@ -159,17 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "8f9c2c7a-48e0-43b7-a00c-559575fbb52b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://www.ontario.ca//page/siu-directors-report-case-17-ofd-379'"
+       "'https://www.ontario.ca/page/siu-directors-report-case-18-pvi-175'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "f5904b27-8915-4f21-b294-36e3e07bb991",
    "metadata": {},
    "outputs": [
@@ -189,13 +195,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<title>SIU Director’s Report - Case # 17-OFD-379 | ontario.ca</title>\n"
+      "<title>SIU Director’s Report - Case # 18-PVI-175 | ontario.ca</title>\n"
      ]
     }
    ],
    "source": [
     "# scrape the first directors report 17-OFD-379\n",
-    "page = urlopen(url)\n",
+    "\n",
+    "hdr = {'User-Agent': 'Mozilla/5.0'}\n",
+    "req = Request(url,headers=hdr)\n",
+    "page = urlopen(req)\n",
     "html = page.read().decode(\"utf-8\")\n",
     "soup = BeautifulSoup(html, \"html.parser\")\n",
     "print(soup.find(\"title\"))"
@@ -203,17 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f7182c9e-dee3-401e-993b-e4382e9d0ed0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'At approximately 2:09\\xa0a.m. on December\\xa030,\\xa02017, the Peel Regional Police (PRP) notified the SIU of the firearm death of a man in Mississauga. At the time of the notification, the man had not yet been identified.footnote 1[1]'"
+       "'On June\\xa010,\\xa02018, at 12:29\\xa0a.m., the Ontario Provincial Police (OPP) reported the vehicle injury of the Complainant.'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,17 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "d1c1d99c-7d98-400d-9c38-226abcb0b191",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2017'"
+       "'2018'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,43 +264,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "b9f1f23b-09c1-4e17-a067-e5382ef86c64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Peel Regional Police (PRP)'"
+       "'Ontario Provincial Police (OPP)'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pattern = \"the.*?notified\"\n",
-    "match_results = re.search(pattern, text, re.IGNORECASE)\n",
-    "police_service = match_results.group()\n",
-    "police_service = re.sub(\"the \", \"\", police_service)\n",
-    "police_service = re.sub(\" notified\", \"\", police_service)\n",
+    "try:\n",
+    "    pattern = \"the.*?notified\"\n",
+    "    match_results = re.search(pattern, text, re.IGNORECASE)\n",
+    "    police_service = match_results.group()\n",
+    "    police_service = re.sub(\"the \", \"\", police_service)\n",
+    "    police_service = re.sub(\" notified\", \"\", police_service)\n",
+    "except:\n",
+    "    pattern = \"the.*?reported\"\n",
+    "    match_results = re.search(pattern, text, re.IGNORECASE)\n",
+    "    police_service = match_results.group()\n",
+    "    police_service = re.sub(\"the \", \"\", police_service)\n",
+    "    police_service = re.sub(\" reported\", \"\", police_service)\n",
     "police_service"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "90653028-eadf-4f52-aa92-d69309c4701c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Mississauga'"
+       "nan"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,41 +321,108 @@
     "split_str = webpage.partition('City of')\n",
     "word_after_cityof = split_str[2].strip().split(\" \")\n",
     "city = word_after_cityof[0].strip(string.punctuation)\n",
+    "if city == \"\":\n",
+    "    city = np.nan\n",
     "city\n",
     "# row['beds'] = number_of_beds #append column to existing row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "0bb23997-980e-4a7d-94cd-415dd4fbfaab",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On June 10, 2018, at 12:29 a.m., the Ontario Provincial Police (OPP) reported the vehicle injury of the Complainant.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'The Post-Mortem Report, which the SIU received on October\\xa02,\\xa02018, determined the cause of death to be a gunshot wound to the left chest.'"
+       "'reported vehicle injury of Complainant'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# officer name is not included in accordance with section 21 of FIPPA\n",
-    "# moving onto civilian consquences, this can be found more easily in section 4\n",
-    "text = soup.find_all(\"h3\")[9].next_sibling.get_text()\n",
-    "text"
+    "# moving onto civilian consquences, this can be found in the text we have\n",
+    "print(text)\n",
+    "temp = text.split(\".\")\n",
+    "for i in temp:\n",
+    "    if police_service in i:\n",
+    "        pattern = \"\\).*\"\n",
+    "        match_results = re.search(pattern, i, re.IGNORECASE)\n",
+    "        civilian_consequences = match_results.group()\n",
+    "        civilian_consequences = re.sub(\"\\) \", \"\", civilian_consequences).strip()\n",
+    "        civilian_consequences = re.sub(\"the \", \"\", civilian_consequences).strip()\n",
+    "civilian_consequences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "780a5c5e-46b7-44bc-a14a-54d361470b18",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# find consequences for officer\n",
+    "# personally, I can't find an area of these reports that mention consequences for the officers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8bbdabae-1d6b-4a95-9792-12c3e693e1b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<h2 class=\"alert__header-title h4\">Ontario.ca needs JavaScript to function properly and provide you with a fast, stable experience.</h2>,\n",
+       " <h2 class=\"small\"> On this page <a class=\"show-on-focus text-right small margin-left-16-!\" href=\"#toc-end\">Skip this page navigation</a></h2>,\n",
+       " <h2>Mandate of the <abbr title=\"Special Investigations Unit\">SIU</abbr></h2>,\n",
+       " <h2>Information restrictions</h2>,\n",
+       " <h2>Mandate engaged</h2>,\n",
+       " <h2>The investigation</h2>,\n",
+       " <h2>Incident narrative</h2>,\n",
+       " <h2>Evidence</h2>,\n",
+       " <h2>Relevant legislation</h2>,\n",
+       " <h2>Analysis and director’s decision</h2>,\n",
+       " <h2 class=\"h5 sidebar__header\" id=\"section-related\"> Related <span class=\"show-for-sr\">information</span></h2>,\n",
+       " <h2 class=\"h3\">Footnotes</h2>,\n",
+       " <h2 class=\"h4 footer-ministry__heading\"><div>Ministry of the Attorney General</div></h2>,\n",
+       " <h2 class=\"h4 footer-ministry__heading\">Questions or comments</h2>]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# investigation outcome\n",
+    "# this is found in the director's analysis section/last paragraph of the report\n",
+    "outcome = soup.find_all(\"h2\")\n",
+    "outcome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d875c987-be8d-4698-8dea-b9bf10dbf9a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reason for police investigation\n"
+   ]
   }
  ],
  "metadata": {
