--- a/requested_scripts/on_siu_2018_2023.ipynb
+++ b/requested_scripts/on_siu_2018_2023.ipynb
@@ -349,71 +349,60 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9d01a3b0-5826-4502-a931-f4b5e5b90cde",
+   "id": "da4ec4f7-011e-43d1-af62-ee8e31a1a9c4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "incident_narrative_title = soup.find(\"h2\", string=\"Incident Narrative\")"
+    "def find_incident_narrative():\n",
+    "    try:\n",
+    "        \n",
+    "        if soup.find(\"h2\", string=\"Incident Narrative\"):\n",
+    "            incident_narrative_title = soup.find(\"h2\", string=\"Incident Narrative\")\n",
+    "        elif soup.find(\"h2\", string=\"Incident narrative\"): \n",
+    "            incident_narrative_title = soup.find(\"h2\", string=\"Incident Narrative\")\n",
+    "        elif soup.find(\"h2\", string=\"Event Chronology\"):\n",
+    "            incident_narrative_title = soup.find(\"h2\", string=\"Event Chronology\")\n",
+    "        else:\n",
+    "            incident_narrative_title = soup.find(\"h2\", string=\"The Investigation\")\n",
+    "        \n",
+    "        \n",
+    "        next_sibling = incident_narrative_title.next_sibling\n",
+    "        incident_narrative = [next_sibling]\n",
+    "\n",
+    "        while next_sibling.next_sibling.name == \"div\":\n",
+    "            next_sibling = next_sibling.next_sibling\n",
+    "            incident_narrative.append(next_sibling)\n",
+    "\n",
+    "        #print(incident_narrative)\n",
+    "        return incident_narrative\n",
+    "    except:\n",
+    "        print(\"Issue with finding Incident Narrative\")\n",
+    "        return \"Issue with finding Incident Narrative\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "da4ec4f7-011e-43d1-af62-ee8e31a1a9c4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['\\n', <div>\n",
-      "          The material events in question are clear on the evidence collected by the <abbr title=\"Special Investigations Unit\">SIU</abbr> and may briefly be summarized.<br> <br>  In the afternoon of March 30, 2023, the Complainant was operating a Mercedes-Benz vehicle eastbound on Highway 401.  He was doing so recklessly and at speed, weaving in and out of traffic, passing motorists on the shoulders of the highway, and travelling upwards of 160 km/h on the estimate of some witnesses. <br> <br>  The <abbr title=\"Subject Officer\">SO</abbr> was also travelling eastbound on Highway 401 at the time.  While operating an unmarked Charger at about 120 km/h, the officer was passed in the centre lane by the Complainant’s Mercedes-Benz.  Deciding he would stop the vehicle for speeding, the <abbr title=\"Subject Officer\">SO</abbr> activated his vehicle’s emergency lights and accelerated to about 180 km/h attempting to catch up to the Mercedes-Benz.  As the Complainant continued to increase the distance between their vehicles, the officer pulled over onto the south shoulder of the highway and came to a stop east of Culloden Line.<br> <br>  The Complainant continued apace.  As he approached Plank Line, he veered onto the off-ramp and lost control of the vehicle.  The Mercedes-Benz left the roadway, entered onto a grassy median and flipped several times before coming to a rest on its roof.<br> <br>  First responders arrived on scene and extricated the Complainant from the wreckage.  He was taken to hospital with a fractured back and, possibly, other injuries.                    \n",
-      "\n",
-      "</br></br></br></br></br></br></br></br></div>]\n"
-     ]
-    }
-   ],
-   "source": [
-    "next_sibling = incident_narrative_title.next_sibling\n",
-    "incident_narrative = [next_sibling]\n",
-    "\n",
-    "while next_sibling.next_sibling.name == \"div\":\n",
-    "    next_sibling = next_sibling.next_sibling\n",
-    "    incident_narrative.append(next_sibling)\n",
-    "    \n",
-    "print(incident_narrative)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "id": "58ccbfe8-052e-4def-981a-2c7ea86af903",
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_city(soup):\n",
-    "    incident_narrative_title = soup.find(\"h2\", string=\"Incident Narrative\")\n",
-    "    \n",
-    "    \n",
-    "    next_sibling = incident_narrative_title.next_sibling\n",
-    "    incident_narratives = [next_sibling]\n",
-    "    \n",
-    "\n",
-    "    while next_sibling.next_sibling.name == \"div\":\n",
-    "        next_sibling = next_sibling.next_sibling\n",
-    "        incident_narratives.append(next_sibling)\n",
-    "        \n",
-    "    for p in incident_narratives:\n",
-    "        for municipality in list_of_municipalities_in_ontario:\n",
-    "            regex = r\"\\b(?=\\w)\" + re.escape(municipality) + r\"\\b(?!\\w)\"\n",
-    "            match = re.search(regex, get_inner_text(p), re.IGNORECASE)\n",
-    "            if match:\n",
-    "                return municipality"
+    "    incident_narratives = find_incident_narrative()\n",
+    "    if incident_narratives != \"Issue with finding Incident Narrative\":    \n",
+    "        for p in incident_narratives:\n",
+    "            for municipality in list_of_municipalities_in_ontario:\n",
+    "                regex = r\"\\b(?=\\w)\" + re.escape(municipality) + r\"\\b(?!\\w)\"\n",
+    "                match = re.search(regex, get_inner_text(p), re.IGNORECASE)\n",
+    "                if match:\n",
+    "                    return municipality\n",
+    "    else:\n",
+    "        return \"Municipality not found\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "efa822f9-fed9-487f-9acb-ff268287b88a",
    "metadata": {},
    "outputs": [],
@@ -423,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "0bb23997-980e-4a7d-94cd-415dd4fbfaab",
    "metadata": {},
    "outputs": [],
@@ -492,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "8d560897-6f73-4913-88b5-5cdbb7717910",
    "metadata": {},
    "outputs": [
@@ -510,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "780a5c5e-46b7-44bc-a14a-54d361470b18",
    "metadata": {},
    "outputs": [],
@@ -521,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "7db78201-90c1-41ec-ae93-75da1f8a01f2",
    "metadata": {},
    "outputs": [],
@@ -537,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "0f37f94e-fbc6-49bd-91d5-c4ef886513bc",
    "metadata": {},
    "outputs": [],
@@ -567,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "2f9b10bf-4959-4f7e-a7e8-0105f626f192",
    "metadata": {},
    "outputs": [
@@ -577,7 +566,7 @@
        "'<aside style=\"margin-top:2em;\"></aside>'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "d875c987-be8d-4698-8dea-b9bf10dbf9a2",
    "metadata": {},
    "outputs": [],
@@ -600,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "0285fe52-a442-4fac-96a8-8d35d32d2a63",
    "metadata": {},
    "outputs": [
@@ -608,7 +597,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 37%|██████████████████████████                                             | 256/697 [03:12<05:32,  1.33it/s]"
+      " 37%|██████████████████████████▏                                            | 257/697 [01:06<02:04,  3.53it/s]"
      ]
     },
     {
@@ -622,19 +611,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      " 67%|███████████████████████████████████████████████▎                       | 464/697 [02:00<01:17,  3.02it/s]"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'next_sibling'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/q_/d2k9l24j62lbjw452v2y9gbr0000gn/T/ipykernel_70382/3966472421.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mcivilian_consequences\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_civilian_consequences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msoup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mcity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_city\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msoup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0minvestigation_outcome\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_investigation_outcome\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msoup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/var/folders/q_/d2k9l24j62lbjw452v2y9gbr0000gn/T/ipykernel_70382/4257838407.py\u001b[0m in \u001b[0;36mfind_city\u001b[0;34m(soup)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mnext_sibling\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mincident_narrative_title\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext_sibling\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mincident_narratives\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mnext_sibling\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'next_sibling'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<title>Special Investigations Unit -- Director's Report Details, Case Number: 19-TCI-073a</title>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 74%|████████████████████████████████████████████████████▊                  | 518/697 [02:12<00:36,  4.93it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<title>Special Investigations Unit -- Director's Report Details, Case Number: 18-OCI-342</title>\n",
+      "Issue with finding Incident Narrative\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████| 697/697 [02:56<00:00,  3.94it/s]\n"
      ]
     }
    ],
@@ -670,17 +676,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e3f8468c-d7b5-4f1a-908d-2fac1e8a4222",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Police Service</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Province</th>\n",
+       "      <th>Civilian Consequences</th>\n",
+       "      <th>Investigation Final Decision</th>\n",
+       "      <th>Link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>He was taken to hospital with a fractured back...</td>\n",
+       "      <td>&lt;aside style=\"margin-top:2em;\"&gt;&lt;/aside&gt;</td>\n",
+       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Kingston</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>The Complainant was transported to hospital in...</td>\n",
+       "      <td>&lt;aside style=\"margin-top:2em;\"&gt;&lt;/aside&gt;</td>\n",
+       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>Following his arrest the Complainant was taken...</td>\n",
+       "      <td>&lt;aside style=\"margin-top:2em;\"&gt;&lt;/aside&gt;</td>\n",
+       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>His wife and son were fortunate to have escape...</td>\n",
+       "      <td>&lt;aside style=\"margin-top:2em;\"&gt;&lt;/aside&gt;</td>\n",
+       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Niagara</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>The Complainant was taken into custody and tra...</td>\n",
+       "      <td>&lt;aside style=\"margin-top:2em;\"&gt;&lt;/aside&gt;</td>\n",
+       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year Police Service      City Province  \\\n",
+       "0  None           None      None  Ontario   \n",
+       "1  None           None  Kingston  Ontario   \n",
+       "2  None           None    London  Ontario   \n",
+       "3  None           None      None  Ontario   \n",
+       "4  None           None   Niagara  Ontario   \n",
+       "\n",
+       "                               Civilian Consequences  \\\n",
+       "0  He was taken to hospital with a fractured back...   \n",
+       "1  The Complainant was transported to hospital in...   \n",
+       "2  Following his arrest the Complainant was taken...   \n",
+       "3  His wife and son were fortunate to have escape...   \n",
+       "4  The Complainant was taken into custody and tra...   \n",
+       "\n",
+       "              Investigation Final Decision  \\\n",
+       "0  <aside style=\"margin-top:2em;\"></aside>   \n",
+       "1  <aside style=\"margin-top:2em;\"></aside>   \n",
+       "2  <aside style=\"margin-top:2em;\"></aside>   \n",
+       "3  <aside style=\"margin-top:2em;\"></aside>   \n",
+       "4  <aside style=\"margin-top:2em;\"></aside>   \n",
+       "\n",
+       "                                                Link  \n",
+       "0  https://www.siu.on.ca/en/directors_report_deta...  \n",
+       "1  https://www.siu.on.ca/en/directors_report_deta...  \n",
+       "2  https://www.siu.on.ca/en/directors_report_deta...  \n",
+       "3  https://www.siu.on.ca/en/directors_report_deta...  \n",
+       "4  https://www.siu.on.ca/en/directors_report_deta...  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9d48c903-6cf7-40e2-a2ed-478106d04a14",
    "metadata": {},
    "outputs": [],
